--- a/30-jours-code/17-rest-countries-api/package.json
+++ b/30-jours-code/17-rest-countries-api/package.json
@@ -159,7 +159,7 @@
   },
   "scripts": {
     "dev": "concurrently -k -n \"Tailwind,TypeScript\" -p \"[{name}]\" -c \"yellow,blue\" \"postcss input.css -o output.css -w\" \"tsc -w\"",
-    "watch": "cross-env NODE_ENV=production postcss input.css -o output.css"
+    "prod": "cross-env NODE_ENV=production postcss input.css -o output.css"
   },
   "keywords": [],
   "author": "",
